--- a/src/Pages/SignUp/SignUp.css
+++ b/src/Pages/SignUp/SignUp.css
@@ -8,13 +8,13 @@
 }
 
 .signup-left-section {
-    flex: 2.5;
+    flex: 1.2;
     height:100%;
     background: url('./images/SignUp.png') center/cover no-repeat;
 }
 
 .signup-right-section {
-    flex: 1.5;
+    flex: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -23,8 +23,8 @@
 .signup-logo {
     position: absolute;
     transform: translate(-7%, -35%);
-    margin-top: 0%;
-    max-width: 300px;
+    margin-top: 2%;
+    max-width: 290px;
     width: 100%;
     height: 200px;
     background: url('./images/Logo.png') center/cover no-repeat;
@@ -32,7 +32,7 @@
 }
 
 .signup-input-container {
-    margin-top: 1%;
+    margin-top: -1%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -40,14 +40,14 @@
 
 .Signup-topic {
     margin-top: 23%;
-    font-size: 300%;
+    font-size: 290%;
     font-weight: bolder;
     color: rgb(86, 86, 86);
 }
 
 input {
     margin-top: 5%;
-    width: 70%;
+    width: 90%;
     height: 40px;
     margin-bottom: 0%;
     padding: 5px;
@@ -59,27 +59,27 @@ input {
 .signup-button {
     width: 100px;
     height: 40px;
-    background-color: black;
-    color: white;
+    background-color: rgb(247, 184, 184);
     border: none;
+    color: rgb(219, 211, 211);
     border-radius: 15px;
     cursor: pointer;
     font-size: 20px;
-    margin-top: 5%;
+    margin-top: 1%;
 }
 
 .signup-login-text {
-    margin-top: 20px;
+    margin-top: 1%;
     margin-left: -120px;
 }
 
 .signup-login-link {
     margin-bottom: -5%;
-    color: rgb(32, 32, 205);
+    color: rgb(48, 30, 211);
     text-decoration: none;
-    margin-left: 95px;
+    margin-left: 19%;
     margin-bottom: 2px;
-    font-size: 18px;
+    font-size: 20px;
 }
 
 .name-inputs {
