--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -6,7 +6,7 @@
     background-color: #f1f1f1;
 }
 
-.left-section {
+.left-section-Login {
     flex: 1.5;
     height: 100%;
     background: url('./images/Login.png') center/cover no-repeat;
