--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,51 +1,61 @@
 .Home-header {
-    position: relative;
-    min-height: 100vh;
-    display: grid;
-    grid-template-rows: min-content;
-    align-items: center;
-    justify-content: center;
-    background: url('./images/wallpaperflare_1.png') center/cover no-repeat;
-  }
-  
+   position: relative;
+   min-block-size: 100vh;
+   display: grid;
+   grid-template-rows: min-content;
+   align-items: center;
+   justify-content: center;
+   animation: slideshow 20s infinite; /* Change 20s to adjust slideshow speed */
+ }
  
-  .App_logo {
-    position: absolute;  
-    top: 35%;  
-    left: 50%; 
-    transform: translate(-50%, -50%);  
-    width: 100%;  
-    max-width: 900px;  
-    height: 300px;
-    background: url('./images/logo_white_1.png') center/cover no-repeat;
-  }
+ @keyframes slideshow {
+   0% { background-image: url('images/img1.png'); }
+   25% { background-image: url('images/img2.jpg'); }
+   50% { background-image: url('images/img3.jpg'); }
+   75% { background-image: url('images/img4.jpg'); }
+   75% { background-image: url('images/img5.jpg'); }
+   100% { background-image: url('images/img1.png'); }
+ }
+ 
 
- .btn-login{
-    margin-top: 123%;
-    max-height: 10px;
+ .App_logo {
+   position: absolute;  
+   inset-block-start: 35%;  
+   inset-inline-start: 50%; 
+   transform: translate(-50%, -50%);  
+   inline-size: 100%;  
+   max-inline-size: 900px;  
+   block-size: 300px;
+   background: url('images/logo_white_1.png') center/cover no-repeat;
  }
 
- .Learn-more{
-    font-size: 25px;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
-    margin-right: 100px;
-    width:180px;
-    background-color: rgb(20, 20, 78);
-    opacity: 0.7;
-    color: white;
-    cursor: pointer;
-    margin-right: 4vw; 
-    max-width: 180px;
- }
+.btn-login{
+   margin-block-start: 123%;
+   max-block-size: 10px;
+}
 
- .Get-Started{
-    font-size: 25px;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
-    width:180px;
-    background-color: rgb(93, 12, 12);
-    opacity: 0.7;
-    color: white;
-    cursor: pointer;
-    margin-left: 4vw;
-    max-width: 180px;
- }
+.Learn-more{
+   font-size: 25px;
+   font-family:Verdana, Geneva, Tahoma, sans-serif;
+   margin-inline-end: 100px;
+   inline-size:180px;
+   background-color: rgb(20, 20, 78);
+   opacity: 0.7;
+   color: white;
+   cursor: pointer;
+   margin-inline-end: 4vw; 
+   max-inline-size: 200px;
+}
+
+.Get-Started {
+  font-size: 25px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  inline-size: 180px;
+  background-color: rgb(93, 12, 12);
+  opacity: 0.7;
+  color: white;
+  cursor: pointer;
+  margin-inline-start: 250px;
+  max-inline-size: 180px;
+  margin-left: 50px;
+}
