--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -7,10 +7,20 @@
 }
 
 .left-section-Login {
-    flex: 1.5;
+    flex: 2;
     height: 100%;
-    background: url('./images/Login.png') center/cover no-repeat;
+    background: url('./images/veh1.png') center/cover no-repeat;
+    animation: slideshow1 20s infinite; /* Change 20s to adjust slideshow speed */
 }
+
+@keyframes slideshow1 {
+    0% { background-image: url('./images/veh1.png'); }
+    25% { background-image: url('./images/veh2.jpg'); }
+    50% { background-image: url('./images/veh3.jpg'); }
+    75% { background-image: url('./images/veh4.jpg'); }
+    100% { background-image: url('./images/veh1.png'); }
+}
+
 
 .right-section {
     flex: 1;
