--- a/src/Pages/SignUp/SignUp.css
+++ b/src/Pages/SignUp/SignUp.css
@@ -3,14 +3,23 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    width: 1525px;
+    width: 1510px;
     background-color: #f1f1f1;
 }
 
 .signup-left-section {
-    flex: 1.2;
+    flex: 1.5;
     height:100%;
-    background: url('./images/SignUp.png') center/cover no-repeat;
+    background: url('./images/img14.png') center/cover no-repeat;
+    animation: slideshow1 20s infinite; /* Change 20s to adjust slideshow speed */
+}
+
+@keyframes slideshow1 {
+    0% { background-image: url('./images/img14.png'); }
+    25% { background-image: url('./images/img12.jpg'); }
+    50% { background-image: url('./images/img13.png'); }
+    75% { background-image: url('./images/img11.jpg'); }
+    100% { background-image: url('./images/img14.png'); }
 }
 
 .signup-right-section {
@@ -23,7 +32,7 @@
 .signup-logo {
     position: absolute;
     transform: translate(-7%, -35%);
-    margin-top: 2%;
+    margin-top: -2%;
     max-width: 290px;
     width: 100%;
     height: 200px;
@@ -32,7 +41,7 @@
 }
 
 .signup-input-container {
-    margin-top: -1%;
+    margin-top: -10%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -56,12 +65,12 @@ input {
     font-size: 15px;
 }
 
-.signup-button {
+.signup-button1 {
     width: 100px;
     height: 40px;
-    background-color: rgb(247, 184, 184);
+    background-color: rgb(127, 165, 209);
     border: none;
-    color: rgb(219, 211, 211);
+    color: rgb(219, 191, 191);
     border-radius: 15px;
     cursor: pointer;
     font-size: 20px;
@@ -75,7 +84,7 @@ input {
 
 .signup-login-link {
     margin-bottom: -5%;
-    color: rgb(48, 30, 211);
+    color: rgb(156, 35, 35);
     text-decoration: none;
     margin-left: 19%;
     margin-bottom: 2px;
@@ -85,7 +94,7 @@ input {
 .name-inputs {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 10px;
+    width: 85%;
 }
 
 /* Add this style to adjust the width of the inputs */
